--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,7 @@
   display: block;
 }
 .create button {
-  background: #f1356d;
+  background: #a45ee5;
   color: #fff;
   border: 0;
   padding: 8px;
